[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nadf"
version = "0.1.0"
description = "NamuWiki crawler & PDF utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Donghyeon Park", email = "pdh0128a@gmail.com" }]
keywords = ["crawler", "namuwiki", "pdf"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# 실제 런타임 의존성 (requirements.txt 내용을 옮기세요)
dependencies = [
  # 예시 — 꼭 실제 사용하는 것으로 교체하세요
  "httpx>=0.27",
  "selenium>=4.20",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "fpdf2>=2.7",     # 사용 중이면
]

[project.urls]
Homepage = "https://github.com/yourname/nadf"
Issues = "https://github.com/yourname/nadf/issues"

# nadf 패키지 자동 탐색
[tool.setuptools.packages.find]
where = ["."]
include = ["nadf*"]

# 패키지 안에 들어갈 데이터(폰트 등)
[tool.setuptools.package-data]
nadf = ["fonts/*.ttf"]

# (옵션) CLI 커맨드 노출하고 싶으면
[project.scripts]
nadf-namuwiki = "nadf.crawler.crawler:main"   # 실제 함수 경로로 수정
